fix: добавить wrap флекс контейнеру

--- a/src/components/Projects/Projects.sass
+++ b/src/components/Projects/Projects.sass
@@ -4,6 +4,7 @@
   width: 100%
   display: flex
   flex-direction: row
+  flex-wrap: wrap
   justify-content: space-around
   list-style-type: none
   margin: 0
